2004-05-12  Brian Kahne  <bkahne@ibmoto.com>

	* Broke plasma.mc into multiple files.

	* Finished alt work- added exception cleanup code.

	* Modified looping alt so that if the loop index variable
	is not a simple built-in type (integer compatible), we'll create
	an auxiliary vector and store index values there.  The handle we
	store in each channel is the index of the corresponding entry in
	the vector.

2004-05-11  Brian Kahne  <bkahne@ibmoto.com>

	* Changed alt/port block to a new synax.  Now, it's:

	alt {
	  port([<value decl>];<channel>;) { <action> }
	  ...
	  [ { <default action> } ]
	}

	In other words, it's a for-loop style syntax for the port block
	and a full declaration is required; the type-inferencing wasn't
	working very well, so I just made it explicit.

	* Added plasma.h for Plasma interface stuff that we want users to
	have to explicitly include, e.g. channel classes, etc.

	* Moved all plasma interface stuff into the plasma namespace.

2004-05-10  Brian Kahne  <bkahne@ibmoto.com>

	* Initial version of alt added.  The syntax is:

	alt {
	  port(<channel>[,<variable]) { <action> }
	  ...
	  [ { <default action> } ]
	}

	We check each channel listed in a port directive.  If one is found
	ready, its action is executed.  If a variable is present in the
	port statement, the value read from the channel is mapped to the
	variable, which is in scope for the action code.  If the default
	action block is present, then if no channels are ready, it is
	executed.  Otherwise, if no channels are ready, the alt-block
	sleeps until a channel is ready.  The action associated with the
	ready channel is then executed.

2004-05-07  Brian Kahne  <bkahne@ibmoto.com>

	* Expanded plasma-interface.h with functions needed to channels.
	Added chan1 regression to test a primitive channel written
	directly in C++.

2004-05-06  Brian Kahne  <bkahne@ibmoto.com>

	* Started a user guide (doc/user-guide.rst) and a schedule