@@ -290,7 +290,7 @@ TBD</blockquote>
 <blockquote>
 <p>Thread creation w/o synchronization, e.g.:</p>
 <pre class="literal-block">
-spawn foo(1,2,3);
+spawn { foo(1,2,3); };
 </pre>
 <p>Evaluates the argument (must resolve to a function or an object's member
 invocation).  The argument is launched as a thread.  The return value is an
@@ -307,7 +307,11 @@ value, so calls to clear_ready() will be ignored.</p>
 </blockquote>
 <p>Implementation:</p>
 <blockquote>
-TBD</blockquote>
+<ul class="simple">
+<li>Registered as a while-style statement.</li>
+<li>Need to handle void functions (those that don't return a value).</li>
+</ul>
+</blockquote>
 <p>Dependencies:</p>
 <blockquote>
 TBD</blockquote>
@@ -445,7 +449,7 @@ TBD</blockquote>
 <hr class="footer"/>
 <div class="footer">
 <a class="reference" href="schedule.rst">View document source</a>.
-Generated on: 2004/05/12 12:02:05 CDT.
+Generated on: 2004/05/14 11:44:33 CDT.
 Generated by trip.prl release 1.2.2 from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 </div>
 </body>
