@@ -63,6 +63,11 @@ my @Tests = (
 	      cmd     => "./chan7",
 	      checker => \&check_chan7,
 	     },
+	     # Spawn test- C++ only.
+	     {
+	      cmd     => "./spawn1",
+	      checker => \&check_spawn1,
+	     }
 	    );
 
 doTest(\@Tests);
@@ -247,6 +252,22 @@ sub check_channel {
     if (!$exphash{$i}) {
       print "Expected to find an occurrance of \"$i\" but did not.\n";
       die;
+    }
+  }
+}
+
+# Makes sure expected results are found.
+sub check_spawn1 {
+  my @lines = split /\n/,@_[0];
+  my @exp = ( 6.05, 103.33, 10103.1 );
+  for (@lines) {
+    if ( /^Result is:/ ) {
+      my @res = ( /(\d+.\d+)/g );
+      for my $i (0..$#exp) {
+	if ($res[$i] != $exp[$i]) {
+	  die "Mismatch on result value $i (Found $res[$i], expected $exp[$i]).\n";
+	}
+      }
     }
   }
 }
