@@ -1,3 +1,12 @@
+2004-05-14  Brian Kahne  <bkahne@ibmoto.com>
+
+	* Added pDone(const THandle), which returns true if the specified
+	thread is finished.  
+
+	* Added initial code to parser to parse spawn command.
+
+	* Added C++-only spawn test to test spawn implementation concept.
+
 2004-05-12  Brian Kahne  <bkahne@ibmoto.com>
 
 	* Broke plasma.mc into multiple files.
